Poprawa stylu okienek GUI